# dynafile

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  architecture.puml  pyproject.toml  pytest.ini
dynafile/: __init__.py  dispatcher.py
src/dynafile/: __init__.py
tests/: test_deletion.py  test_event_hooks.py  test_global_secondary_index.py  test_peformance.py  test_query.py  test_scan.py  test_store_and_load.py  test_ttl.py
