[tool.poetry]
name = "dynafile"
version = "0.1.2"
description = "NoSQLDB following the Dynamo concept, but for a filebased embedded db."
authors = ["Maic Siemering <maic@siemering.tech>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eruvanos/dynafile"
keywords = ["database", "nosql"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

packages = [
    { include = "dynafile" }
]

[tool.poetry.dependencies]
python = "^3.8"
sortedcontainers = "^2.4.0"
atomicwrites = "^1.4.0"
filtration = {version = "^2.3.0", optional = true}

[tool.poetry.extras]
filter = ["filtration"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"
time-machine = "^2.6.0"
black = {version = "^22.3.0", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
