[project]
name = "dynafile"
version = "0.1.3"
description = "NoSQLDB following the Dynamo concept, but for a filebased embedded db."
authors = [{name = "Maic Siemering", email = "maic@siemering.tech"}]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eruvanos/dynafile"
keywords = ["database", "nosql"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "sortedcontainers>=2.4.0",
    "atomicwrites>=1.4.1",
]
requires-python = ">= 3.8"

[project.optional-dependencies]
filter = [
    "filtration>=2.3.0",
]

[tool.rye.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pytest-benchmark>=4.0.0",
    "time-machine>=2.14.1",
    "ruff>=0.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dynafile"]
